--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.7.0"
   },
   "dependencies": {
+    "@catppuccin/palette": "^0.2.0",
     "@nuxt/content": "^2.8.2",
     "nuxt-icon": "^0.5.0"
   }
