--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@catppuccin/palette": "^0.2.0",
     "@nuxt/content": "^2.8.2",
+    "@vercel/analytics": "^1.1.1",
     "nuxt-icon": "^0.5.0"
   }
 }
