--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@catppuccin/palette": "^0.2.0",
     "@nuxt/content": "^2.8.2",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.1",
     "nuxt-icon": "^0.5.0"
   }
 }
