--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/content": "^2.8.2",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.1",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "ucsur-sitelen-pona": "^1.0.1"
   }
 }
